# infero

./: README.md  pyproject.toml
examples/: example.ifo  example2.ifo  example3.ifo  example4.ifo  example5.ifo  example6.ifo  example7.ifo  example8.ifo  example9.ifo  example_contradiction.ifo  example_no_solution.ifo
infero/: __init__.py  __main__.py  cli.py  inference_rules.py  lexer.py  parser.py  sentences.py  solver.py  tokens.py
