[tool.poetry]
name = "infero"
version = "0.1.0"
description = ""
authors = ["ThiagoORuby <trs@ic.ufal.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.8.0"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
